# emmaus_walking

./: .gitignore  .gitpod.yml  Dockerfile  Makefile  Procfile  README.md  Test_Scaleway_S3_Storage.ipynb  app_config.toml  apprunner.yaml  docker-compose.debug.yml  docker-compose.yml  emmaus_walking.cache.feather  emmaus_walking_conda.yml  environment.yml  environment.yml.OFF  environment_OFF.yml  environment_conda.yml  fly.toml  pyproject.toml  requirements.txt  settings.ini  walk_details.toml
.streamlit/: config.toml
data/: README.md
docs/: Gemfile  _config.yml  about.md  app.html  core.html  datapipe.html  index.html  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
emmaus_walking/: _nbdev.py  app.py  core.py  datapipe.py  healthkit_to_fly_prefect.py  map_workouts_app.py
emmaus_walking/data/: readme.md
emmaus_walking/data/B2M/: readme.MD
nbs/: 00_core.ipynb  01_datapipe.ipynb  02_database.ipynb  04_s3fs_storage.ipynb  88_app.ipynb  90_BucketStorageS3.ipynb  90_Test_Scaleway_S3_Storage.ipynb  index.ipynb  try_preql.ipynb
notebooks/: 02_database.ipynb  03_photosgps.ipynb  emmaus_walking  map-gnw-side-walk.ipynb
pql/: airports.pql  healthkit.pql
sql/: select_star_walking_workouts.sql  select_start_point_workout.sql
src/: Emmaus_Walking.py  app.py  core.py  datapipe.py.OFF  helper_functions.py
src/pages/: 1_About.py
src/resources/: walks.json
