[tool.poetry]
name = "emmaus_walking"
version = "0.1.0"
description = "App with mapping of tracked major walks"
authors = ["Michael Booth <michael@databooth.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
