[tool.poetry]
name = "emmaus_walking"
version = "0.1.0"
description = "App with mapping of tracked major walks"
authors = ["Michael Booth <michael@databooth.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
pandas = "^1.2.1"
DateTime = "^4.3"
streamlit-folium = "^0.1.0"
Pillow = "^8.1.0"
ipykernel = "^5.4.3"
nbdev = "^1.1.12"
activityio = "^0.0.3"
gpsphoto = "^2.2.3"
ExifRead = "^2.3.2"
piexif = "^1.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
